--- a/index.html
+++ b/index.html
@@ -7,13 +7,125 @@
     <title>WebStudio</title>
 </head>
 <body>
+
+    <!-- Zagolovok -->
+
     <header>
-        <p>WebStudio</p>
+        <a href=""> <p>WebStudio</p>    </a>
+
+     <nav>
+        <ul>
+            <li><a href=""> Студія </a></li>
+            <li><a href=""> Контакти </a></li>
+            <li><a href=""> Портфоліо </a></li>
+        </ul>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </nav>
     </header>
 
-    <main></main>
+<!-- telo -->
 
-    <footer></footer>
+    <main>
+                        <!-- hero -->
+        <section>
+           <h1>Ефективні рішення для вашого бізнесу</h1>
+           <button type="button" >Замовити послугу</button> 
+
+           <ul>
+            <li>
+                <p>УВАГА ДО ДЕТАЛЕЙ</p>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li><p>ПУНКТУАЛЬНІСТЬ</p>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li><p>ПЛАНУВАННЯ</p>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li><p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+           </ul>
+        </section>
+                        <!-- work -->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img 
+                    src="images2/11.jpg"
+                    alt="printing"
+                    width="370" height="294">
+                </li>
+                <li>
+                    <img 
+                    src="images2/22.jpg"
+                    alt="looking"
+                    width="370" height="294">
+                </li>
+                <li>
+                    <img 
+                    src="images2/33.jpg"
+                    alt="drawing"
+                    width="370" height="294">
+                </li>
+            </ul>
+        </section>
+                    <!-- workers -->
+        <section>
+            <h2>Наша команда</h2>
+                <ul>
+                    <li>
+                        <img 
+                        src="images2/44.jpg"
+                        alt="Product Designer"
+                        width="270" height="368">
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img 
+                        src="images2/55.jpg"
+                        alt="Frontend Developer"
+                        width="270" height="368">
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img 
+                        src="images2/66.jpg"
+                        alt="Marketing"
+                        width="270" height="368">
+                        <h3>Микола Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img 
+                        src="images2/77.jpg"
+                        alt="UI Designer"
+                        width="270" height="368">
+                        <h3>Михайло Єрмаков</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+              
+        </section>
+    </main>
+
+<!-- nogi -->
+    <footer>
+        <a href=""> <p>WebStudio</p>    </a>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/HSLJZPjqChN5azph9"> м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+        </address>
+
+    </footer>
 
     
 </body>
