--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Zagolovok -->
 
     <header>
-        <a href=""> <p>WebStudio</p>    </a>
+        <a href=""> <p>Web<span>Studio</span></p></a>
 
      <nav>
         <ul>
@@ -32,19 +32,24 @@
         <section>
            <h1>Ефективні рішення для вашого бізнесу</h1>
            <button type="button" >Замовити послугу</button> 
+        </section>
 
+        <section>
            <ul>
             <li>
-                <p>УВАГА ДО ДЕТАЛЕЙ</p>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li><p>ПУНКТУАЛЬНІСТЬ</p>
+            <li>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
                 <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li><p>ПЛАНУВАННЯ</p>
+            <li>
+                <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li><p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+            <li>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
            </ul>
@@ -116,7 +121,8 @@
 
 <!-- nogi -->
     <footer>
-        <a href=""> <p>WebStudio</p>    </a>
+        <a href=""> <p>Web<span>Studio</span></p></a>
+
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/HSLJZPjqChN5azph9"> м. Київ, пр-т Лесі Українки, 26</a></li>
